2024 02 10 add new apis, fixed some bugs and apis
